--- a/docs/01_.md
+++ b/docs/01_.md
@@ -73,11 +73,18 @@ echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.
 sudo apt-get update
 sudo apt-get install -y kubelet kubeadm kubectl
 sudo apt-mark hold kubelet kubeadm kubectl
+sudo swapoff -a
+
+
 ```
 
 Set up cluster
 ```bash
 kubeadm init --pod-network-cidr=10.244.0.0/16 --apiserver-advertise-address=${ADDRESS}
+mkdir -p $HOME/.kube
+cp -i /etc/kubernetes/admin.conf $HOME/.kube/config
+chown $d(id -u):$(id -g) $HOME/.kube/config
+kubectl apply -f https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml
 ```
 
 
