join command added

--- a/docs/01_.md
+++ b/docs/01_.md
@@ -50,7 +50,10 @@ cat <<EOF | sudo tee /etc/containerd/config.toml
     SystemdCgroup = true
 EOF
 ```
-
+# Start containerd
+```bash
+sudo systemctl restart containerd
+```
 # These instructions are for Kubernetes 1.29.
 # Update the apt package index and install packages needed to use the Kubernetes apt repository:
 # apt-transport-https may be a dummy package; if so, you can skip that package
@@ -62,8 +65,8 @@ sudo apt-get install -y apt-transport-https ca-certificates curl gpg
 Download the public signing key for the Kubernetes package repositories. The same signing key is used for all repositories so you can disregard the version in the URL:
 
 # If the folder `/etc/apt/keyrings` does not exist, it should be created before the curl command, read the note below.
-# sudo mkdir -p -m 755 /etc/apt/keyrings
 ```bash
+sudo mkdir -p -m 755 /etc/apt/keyrings
 curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.29/deb/Release.key | sudo gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
 echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.29/deb/ /' | sudo tee /etc/apt/sources.list.d/kubernetes.list
 ```
@@ -73,19 +76,28 @@ echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.
 sudo apt-get update
 sudo apt-get install -y kubelet kubeadm kubectl
 sudo apt-mark hold kubelet kubeadm kubectl
-sudo swapoff -a
-
 
 ```
+```bash
+sudo swapoff -a
+```
 
-Set up cluster
+# Setup cluster
 ```bash
 kubeadm init --pod-network-cidr=10.244.0.0/16 --apiserver-advertise-address=${ADDRESS}
+```
+```bash
 mkdir -p $HOME/.kube
 cp -i /etc/kubernetes/admin.conf $HOME/.kube/config
 chown $d(id -u):$(id -g) $HOME/.kube/config
+
+```
+# Addons. Install flannel
+```bash
 kubectl apply -f https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml
 ```
 
-
-
+# Get Join command
+```bash
+kubeadm token create --print-join-command
+```
