--- a/docs/01_.md
+++ b/docs/01_.md
@@ -19,7 +19,7 @@ EOF
 sudo sysctl --system
 ```
 
-# Verify that the net.bridge.bridge-nf-call-iptables, net.bridge.bridge-nf-call-ip6tables, and net.ipv4.ip_forward system variables are set to 1 in your sysctl config by running the following command:
+# Verify above command by running the following command:
 ```bash
 sysctl net.bridge.bridge-nf-call-iptables net.bridge.bridge-nf-call-ip6tables net.ipv4.ip_forward
 ```
@@ -50,13 +50,13 @@ cat <<EOF | sudo tee /etc/containerd/config.toml
     SystemdCgroup = true
 EOF
 ```
-# Start containerd
+
 ```bash
 sudo systemctl restart containerd
 ```
-# These instructions are for Kubernetes 1.29.
+
 # Update the apt package index and install packages needed to use the Kubernetes apt repository:
-# apt-transport-https may be a dummy package; if so, you can skip that package
+
 ```bash
 sudo apt-get update
 sudo apt-get install -y apt-transport-https ca-certificates curl gpg
