--- a/docs/01_.md
+++ b/docs/01_.md
@@ -84,13 +84,22 @@ sudo swapoff -a
 
 # Setup cluster
 ```bash
-kubeadm init --pod-network-cidr=10.244.0.0/16 --apiserver-advertise-address=${ADDRESS}
+sudo kubeadm init --control-plane-endpoint "LOAD_BALANCER_DNS:LOAD_BALANCER_PORT" --upload-certs
 ```
+
 ```bash
 mkdir -p $HOME/.kube
 cp -i /etc/kubernetes/admin.conf $HOME/.kube/config
 chown $d(id -u):$(id -g) $HOME/.kube/config
 
+```bash
+kubeadm join 45.156.24.239:6443 --token vmt6kr.o9l0sofs6k4wd5g7 \
+	--discovery-token-ca-cert-hash sha256:69af88483ad21c800b99dbb2b1c00092fe09d916d7ff7e70fabcc5e67c2bc1aa \
+	--control-plane --certificate-key be05b216188319e9e71fbb932948709d0c655e8d3b47463ad35162e5be93f74e
+
+kubeadm join 45.156.24.239:6443 --token vmt6kr.o9l0sofs6k4wd5g7 \
+	--discovery-token-ca-cert-hash sha256:69af88483ad21c800b99dbb2b1c00092fe09d916d7ff7e70fabcc5e67c2bc1aa 
+```
 ```
 # Addons. Install flannel
 ```bash
