init command changed

--- a/docs/01_.md
+++ b/docs/01_.md
@@ -88,7 +88,7 @@ sudo swapoff -a
 
 # Setup cluster
 ```bash
-sudo kubeadm init --control-plane-endpoint "LOAD_BALANCER_DNS:LOAD_BALANCER_PORT" --upload-certs
+sudo kubeadm init --control-plane-endpoint "LOAD_BALANCER_DNS:LOAD_BALANCER_PORT" --upload-certs --pod-network-cidr=10.244.0.0/16
 ```
 
 ```bash
